--- a/index.html
+++ b/index.html
@@ -1,77 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Seventeen Hip-Hop Unit
-    </title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="index.html">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Patricia Brin Portfolio</title>
+  <link rel="icon" href="A04/W03.logo.png" type="icon"/>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-
 <body>
-
-</body>
-<div class="container-fluid p-5" style="background-color: rgb(189, 32, 32);">
-    <div class="text-center">
-      <div class="h1 text-center mt-2" style="color: white"> Hip-Hop Unit 
-      </div>
+  <nav class="navbar" style="background-color: #0e1627;">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#" style="color: white">
+        <img src="A04/W03.logo.png" alt="Logo" width="35" height="30" class="d-inline-block align-text-top">
+        Patricia Brin
+      </a>
     </div>
-  </div>
+  </nav>
 
-<div class="container">
+  <div class="container mt-5" >
     <div class="row">
         <div class="col-12 col-sm-6 col-md-4 col-lg-3">
             <div class="card shadow m-3">
-                <img src="s.coups.jpg" class="card-img-top">
+                <img src="A04/Reno13.png" class="card-img-top">
                 <div class="card-body">
-                    <h5 class="card-title">Choi Seungcheol (에스쿱스)</h5>
-                    <p class="card-text">Leader, Rapper, Sub Vocalist, Visual</p>
-                    <a href="#" class="btn btn-primary">See more about Seungcheol...</a>
+                    <h5 class="card-title">Activity 04</h5>
+                    <p class="card-text">A one-page HTML about any specific hardware device</p>
+                    <a href="A04/index.html" class="btn btn-primary">See</a>
                 </div>
             </div>
         </div>
-       
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-            <div class="card shadow m-3">
-                <img src="jww.jpg" class="card-img-top">
-                <div class="card-body">
-                    <h5 class="card-title">Jeon Wonwoo (원우)</h5>
-                    <p class="card-text">Rapper, Lead Dancer, Sub Vocalist, Visual</p>
-                    <a href="#" class="btn btn-primary">See more about Wonwoo...</a>
-                </div>
-            </div>
-        </div>
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-            <div class="card shadow m-3">
-                <img src="mingyu.jpg" class="card-img-top">
-                <div class="card-body">
-                    <h5 class="card-title">Mingyu (민규)</h5>
-                    <p class="card-text">Rapper, Sub Vocalist, Visual</p>
-                    <a href="#" class="btn btn-primary">See more about Mingyu...</a>
-                </div>
-            </div>
-        </div>
-    
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-            <div class="card shadow m-3">
-                <img src="bonon.jpg" class="card-img-top">
-                <div class="card-body">
-                    <h5 class="card-title">Vernon (버논)</h5>
-                    <p class="card-text">Rapper, Sub Vocalist, Main Dancer, Visual, Maknae</p>
-                    <a href="#" class="btn btn-primary">See more about Vernon...</a>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+        <button type="button" class="btn btn-outline-light">Light</button>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
-    </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-
 </html>
-
-
