--- a/A04/index.html
+++ b/A04/index.html
@@ -1,1 +1,139 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>WD04</title>
+  <link rel="icon" href="W03.logo.png" type="icon" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    .responsive-image-container {
+      width: 100%;
+      overflow: hidden;
+      text-align: center;
+    }
+
+    .responsive-image {
+      display: block;
+      width: 100%;
+      height: auto;
+      object-fit: contain;
+      aspect-ratio: 20 / 9;
+    }
+
+    .card-custom {
+      margin-top: 20px;
+      margin-bottom: 20px;
+    }
+
+    .navbar-custom {
+      background-color: #D2C2DC;
+      height: 80px;
+    }
+  </style>
+</head>
+
+<body>
+  <!-- Navbar with links -->
+  <nav class="navbar navbar-expand-lg navbar-light" style="background-color: white;">
+    <div class="container-fluid d-flex align-items-center">
+      <a class="navbar-brand d-flex align-items-center" href="#"
+        style="font-family: Arial, Helvetica, sans-serif; color: gray;">
+        <img src="oppo.jpg" alt="logo" width="80" height="75" class="d-inline-block align-text-top">
+        <span style="margin-left: 15px; font-size: 17px;">Overview</span>
+        <span style="margin-left: 15px; font-size: 17px;">Specs</span>
+        <span style="margin-left: 15px; font-size: 17px;">Buy</span>
+      </a>
+    </div>
+  </nav>
+
+  <!-- Second navbar with product name -->
+  <nav class="navbar navbar-light navbar-custom">
+    <div class="container-fluid d-flex align-items-center justify-content-center">
+      <span class="navbar-brand mb-0 h1">Reno13 Pro</span>
+    </div>
+  </nav>
+
+  <!-- Image section -->
+  <div class="container mt-5">
+    <div class="responsive-image-container">
+      <img src="Reno13.png" alt="landscape image" class="responsive-image">
+    </div>
+  </div>
+
+  <!-- Cards Section -->
+  <div class="container mt-5">
+    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4">
+      <!-- Card 1 -->
+      <div class="col card-custom">
+        <div class="card">
+          <img src="cover.jpg" class="card-img-top" alt="Urban Avant-Garde Aesthetic">
+          <div class="card-body">
+            <p class="card-text" style="font-family: Arial, sans-serif; font-weight: bold;">
+              Urban Avant-Garde Aesthetic
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Card 2 -->
+      <div class="col card-custom">
+        <div class="card">
+          <img src="water.jpg" class="card-img-top" alt="IP69 Water and Dust Resistance">
+          <div class="card-body">
+            <p class="card-text" style="font-family: Arial, sans-serif; font-weight: bold;">
+              IP69 Water and Dust Resistance
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Card 3 -->
+      <div class="col card-custom">
+        <div class="card">
+          <img src="purple.jpg" class="card-img-top" alt="One-piece Sculpted Glass">
+          <div class="card-body">
+            <p class="card-text" style="font-family: Arial, sans-serif; font-weight: bold;">
+              One-piece Sculpted Glass
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Card 4 -->
+      <div class="col card-custom">
+        <div class="card">
+          <img src="lense.jpg" class="card-img-top" alt="Ultimate Camera Clarity">
+          <div class="card-body">
+            <p class="card-text" style="font-family: Arial, sans-serif; font-weight: bold;">
+              Ultimate Camera Clarity
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Card 5 -->
+      <div class="col card-custom">
+        <div class="card">
+          <img src="share.jpg" class="card-img-top" alt="Share with Ease">
+          <div class="card-body">
+            <p class="card-text" style="font-family: Arial, sans-serif; font-weight: bold;">
+              Share with Ease
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Back Button -->
+  <div class="d-grid gap-2">
+    <a href="../index.html" class="btn" style="background-color: #D2C2DC;">Back</a>
+  </div>
+
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+
+</html>
