--- a/index.html
+++ b/index.html
@@ -31,6 +31,50 @@
         </div>
         <button type="button" class="btn btn-outline-light">Light</button>
 
+      <div class="container mt-5" >
+    <div class="row">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+            <div class="card shadow m-3">
+                <img src="A05/amsterdam" class="card-img-top">
+                <div class="card-body">
+                    <h5 class="card-title">Activity 05</h5>
+                    <p class="card-text">A one-page HTML about your preferred place you want to featured</p>
+                    <a href="A05/index.html" class="btn btn-primary">See</a>
+                </div>
+            </div>
+        </div>
+        <button type="button" class="btn btn-outline-light">Light</button>
+
+      <div class="container mt-5" >
+    <div class="row">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+            <div class="card shadow m-3">
+                <img src="" class="card-img-top">
+                <div class="card-body">
+                    <h5 class="card-title">Activity 06</h5>
+                    <p class="card-text"></p>
+                    <a href="" class="btn btn-primary">See</a>
+                </div>
+            </div>
+        </div>
+        <button type="button" class="btn btn-outline-light">Light</button>
+      
+      <div class="container mt-5" >
+    <div class="row">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+            <div class="card shadow m-3">
+                <img src="" class="card-img-top">
+                <div class="card-body">
+                    <h5 class="card-title">Activity 07</h5>
+                    <p class="card-text"></p>
+                    <a href="" class="btn btn-primary">See</a>
+                </div>
+            </div>
+        </div>
+        <button type="button" class="btn btn-outline-light">Light</button>
+
+
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
