--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Patricia Brin Portfolio</title>
-  <link rel="icon" href="A04/W03.logo.png" type="icon"/>
+  <link rel="icon" href="A04/W03.logo.png" type="icon">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
@@ -35,7 +35,7 @@
     <div class="row">
         <div class="col-12 col-sm-6 col-md-4 col-lg-3">
             <div class="card shadow m-3">
-                <img src="A05/amsterdam" class="card-img-top">
+                <img src="A05/amsterdam.jpg" class="card-img-top">
                 <div class="card-body">
                     <h5 class="card-title">Activity 05</h5>
                     <p class="card-text">A one-page HTML about your preferred place you want to featured</p>
@@ -72,8 +72,6 @@
             </div>
         </div>
         <button type="button" class="btn btn-outline-light">Light</button>
-
-
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
