--- a/A05/index.html
+++ b/A05/index.html
@@ -14,31 +14,25 @@
 
 </head>
 <body>
+    <nav class="navbar">
+        <span class="logo">Amsterdam</span>
+    </nav>
+
     <section class="hero">
         <div class="slideshow"></div>
-
-        <header class="navbar">
-            <div class="logo">Amsterdam</div>
-            <nav>
-                <ul class="nav-links">
-                    <li><a href="#">Visit</a></li>
-                    <li><a href="#">Explore</a></li>
-                    <li><a href="#">Culture</a></li>
-                    <li><a href="#">Plan</a></li>
-                </ul>
-            </nav>
-        </header>
-
         <div class="hero-content">
             <h2>Journey Through Enchanting Amsterdam</h2>
             <h1>Bikes, Beauty, and Beyond: Exploring Amsterdam</h1>
-            <p>The charming capital of the Netherlands, Amsterdam, is known for its charming canals, graceful gabled homes, and a diverse range of liberal culture and history.  
-                Known as the "Venice of the North," its rivers offer breathtaking exploration opportunities in addition to top-notch museums like the Rijksmuseum and Van Gogh.  
+            <p>The charming capital of the Netherlands, Amsterdam, is known for its charming canals, graceful gabled homes, and a diverse range of liberal culture and history.
+                Known as the "Venice of the North," its rivers offer breathtaking exploration opportunities in addition to top-notch museums like the Rijksmuseum and Van Gogh.
                 Beyond its well-known attractions, Amsterdam is a unique and unforgettable place for every visitor because of its friendly, accepting environment, thriving bicycle culture, and quaint neighborhoods full of quaint cafes and lively markets.</p>
-            <a href="#" class="btn">Plan Your Visit</a>
             <a href="../index.html" class="secondary-btn">Back to Profile</a>
         </div>
-
     </section>
+
+    <footer class="footer">
+        <p>© 2025 Patricia Brin. All rights reserved.</p>
+    </footer>
+
 </body>
 </html>
