--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     <img src="A05/amsterdam.jpg" class="card-img-top" alt="Activity 5">
                     <div class="card-body">
                         <h5 class="card-title">Activity 05</h5>
-                        <p class="card-text">A one-page HTML about your preferred place you want to featured.</p>
+                        <p class="card-text">A website about a place in the world you would like to showcase.</p>
                         <a href="A05/index.html" class="btn btn-primary">See Project</a>
                     </div>
                 </div>
