--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Patricia Brin Portfolio</title>
-    <link rel="icon" href="A04/W03.logo.png" type="icon">
+    <link rel="icon" href="../A04/W03.logo.png" type="icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -62,7 +62,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="A04/W03.logo.png" alt="Logo" width="35" height="30" class="d-inline-block align-text-top">
+                <img src="../A04/W03.logo.png" alt="Logo" width="35" height="30" class="d-inline-block align-text-top">
                 Patricia Brin
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -87,7 +87,7 @@
     <section id="about" class="container mt-5 pt-5">
       <div class="row">
           <div class="col-md-6 mx-auto text-center">
-              <img src="patricia.png" alt="Your Profile Picture" class="img-fluid rounded shadow mb-3" style="max-width: 200px; border-radius: 15px;">
+              <img src="patricia.png" alt="profile" class="img-fluid rounded shadow mb-3" style="max-width: 200px; border-radius: 15px;">
               <h1>Hello, I'm Patricia Brin</h1>
               <p class="lead">I am a second-year student taking up Diploma in Information Technology at Polytechnic University of the Philippines – Sto. Tomas Branch.
                   I'm eager to learn new things, and I'm now developing my programming, web development, and IT foundations abilities.</p>
@@ -121,10 +121,10 @@
             </div>
             <div class="col-lg-4 col-md-6">
                 <div class="card shadow m-3">
-                    <img src="" class="card-img-top" alt="Activty 6">
+                    <img src="A06/NCT_A06.jpg" class="card-img-top" alt="Activty 6">
                     <div class="card-body">
                         <h5 class="card-title">Activity 06</h5>
-                        <p class="card-text">Description of Activty 6 here.</p>
+                        <p class="card-text">An HTML website that contains some form of gallery. It can be about anything.</p>
                         <a href="" class="btn btn-primary">See Project</a>
                     </div>
                 </div>
