--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Activity 06</h5>
                         <p class="card-text">An HTML website that contains some form of gallery. It can be about anything.</p>
-                        <a href="" class="btn btn-primary">See Project</a>
+                        <a href="A06/index.html" class="btn btn-primary">See Project</a>
                     </div>
                 </div>
             </div>
