--- a/A06/index.html
+++ b/A06/index.html
@@ -82,7 +82,7 @@
 
 
             <div class="hidden md:flex space-x-8">
-                <a href="../BRIN_WD03/index.html" class="text-[#fafafa] hover:text-[#7cff01] transition-colors">Back to
+                <a href="../index.html" class="text-[#fafafa] hover:text-[#7cff01] transition-colors">Back to
                     Portfolio</a>
                 <a href="#Meet the Members" class="text-[#fafafa] hover:text-[#7cff01] transition-colors">Members</a>
                 <a href="#About" class="text-[#fafafa] hover:text-[#7cff01] transition-colors">About</a>
