--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Patricia Brin Portfolio</title>
-    <link rel="icon" href="../A04/W03.logo.png" type="icon">
+    <link rel="icon" href="W03.logo.png" type="icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -39,7 +39,7 @@
         #contact h2 i {
             margin-right: 10px; 
             font-size: 1.2em; 
-            vertical-align: middle;
+            vertical-align: middle; 
             color: #333; 
         }
         .social-links {
@@ -87,7 +87,7 @@
     <section id="about" class="container mt-5 pt-5">
       <div class="row">
           <div class="col-md-6 mx-auto text-center">
-              <img src="patricia.png" alt="profile" class="img-fluid rounded shadow mb-3" style="max-width: 200px; border-radius: 15px;">
+              <img src="../A04/patricia.png" alt="Your Profile Picture" class="img-fluid rounded shadow mb-3" style="max-width: 200px; border-radius: 15px;">
               <h1>Hello, I'm Patricia Brin</h1>
               <p class="lead">I am a second-year student taking up Diploma in Information Technology at Polytechnic University of the Philippines – Sto. Tomas Branch.
                   I'm eager to learn new things, and I'm now developing my programming, web development, and IT foundations abilities.</p>
@@ -114,18 +114,18 @@
                     <img src="A05/amsterdam.jpg" class="card-img-top" alt="Activity 5">
                     <div class="card-body">
                         <h5 class="card-title">Activity 05</h5>
-                        <p class="card-text">A website about a place in the world you would like to showcase.</p>
+                        <p class="card-text">A one-page HTML about your preferred place you want to featured.</p>
                         <a href="A05/index.html" class="btn btn-primary">See Project</a>
                     </div>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
                 <div class="card shadow m-3">
-                    <img src="A06/NCT_A06.jpg" class="card-img-top" alt="Activty 6">
+                    <img src="" class="card-img-top" alt="Activty 6">
                     <div class="card-body">
                         <h5 class="card-title">Activity 06</h5>
-                        <p class="card-text">An HTML website that contains some form of gallery. It can be about anything.</p>
-                        <a href="A06/index.html" class="btn btn-primary">See Project</a>
+                        <p class="card-text">Description of Activty 6 here.</p>
+                        <a href="" class="btn btn-primary">See Project</a>
                     </div>
                 </div>
             </div>
@@ -143,7 +143,7 @@
     </section>
 
     <section id="contact" class="container mt-5">
-        <h2><i class="fas fa-envelope"></i>My Contacts</h2>
+        <h2></i>My Contacts</h2>
         <div class="social-links">
             <a href="https://www.facebook.com/patricianicolebbrin?mibextid=ZbWKwL" target="_blank" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
             <a href="https://www.instagram.com/krabbiepatty_?igsh=ZTl0dmJtc3gxbzlm" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
