--- a/index.html
+++ b/index.html
@@ -165,8 +165,7 @@
       <p>Welcome to my portfolio! I'm passionate about technology and always eager to grow. Below you'll find a showcase of my academic and creative web projects.</p>
     </div>
   </section>
-
-  <!-- Projects Section -->
+  
   <section id="projects" class="container mt-5">
     <h2 class="mb-4">My Projects</h2>
     <div class="row">
@@ -196,7 +195,7 @@
           <div class="card-body">
             <h5 class="card-title">Activity 06</h5>
             <p class="card-text">Description of Activity 6 here.</p>
-            <a href="A06/index.html" class="btn btn-primary">See Project</a>
+            <a href="#" class="btn btn-primary">See Project</a>
           </div>
         </div>
       </div>
