--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Patricia Brin Portfolio</title>
-  <link rel="icon" href="https://i.ibb.co/M1YZ1Wc/W03-logo.png" type="image/png">
+  <title>Patricia Brin</title>
+  <link rel="icon" href="../A04/W03.logo.png" type="logo">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -33,7 +33,7 @@
     }
 
     .cover-photo {
-      background-image: url('https://i.ibb.co/d5ZgPDT/studio-ghibli-cover.jpg');
+      background-image: url('');
       background-size: cover;
       background-position: center;
       height: 220px;
@@ -68,22 +68,47 @@
       font-weight: 600;
     }
 
-    .card {
+    .card-container { 
+      height: 350px; 
+      width: 100%;
+      display: flex;
+      flex-direction: column;
       border: none;
       border-radius: 15px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+      overflow: hidden; 
       transition: transform 0.3s ease, box-shadow 0.3s ease;
     }
 
-    .card:hover {
+    .card-container:hover {
       transform: translateY(-8px);
       box-shadow: 0 8px 20px rgba(0,0,0,0.1);
     }
 
     .card-img-top {
-      border-top-left-radius: 15px;
-      border-top-right-radius: 15px;
       height: 200px;
       object-fit: cover;
+      width: 100%; 
+    }
+
+    .card-body {
+      flex-grow: 1; 
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between; 
+      padding: 15px;
+    }
+
+    .card-title {
+      font-size: 1.25rem;
+      margin-bottom: 0.75rem;
+    }
+
+    .card-text {
+      font-size: 1rem;
+      color: #6c757d;
+      margin-bottom: 1rem;
+      flex-grow: 1; 
     }
 
     .btn-primary {
@@ -91,6 +116,7 @@
       border-color: #496977;
       border-radius: 30px;
       padding: 8px 20px;
+      align-self: flex-start; 
     }
 
     .btn-primary:hover {
@@ -131,11 +157,14 @@
     footer p {
       margin: 0;
     }
+
+    .col-lg-4, .col-md-6 {
+      display: flex; 
+    }
   </style>
 </head>
 <body>
 
-  <!-- Navbar -->
   <nav class="navbar navbar-expand-lg fixed-top">
     <div class="container">
       <a class="navbar-brand" href="#">
@@ -155,7 +184,6 @@
     </div>
   </nav>
 
-  <!-- Profile Section -->
   <section id="about" class="profile-section">
     <div class="cover-photo"></div>
     <div class="profile-content">
@@ -165,13 +193,13 @@
       <p>Welcome to my portfolio! I'm passionate about technology and always eager to grow. Below you'll find a showcase of my academic and creative web projects.</p>
     </div>
   </section>
-  
+
   <section id="projects" class="container mt-5">
     <h2 class="mb-4">My Projects</h2>
     <div class="row">
       <div class="col-lg-4 col-md-6">
-        <div class="card shadow m-3">
-          <img src="https://i.pinimg.com/736x/98/9a/ae/989aaefb4f9b3e27a2eae49f2e0beb05.jpg" class="card-img-top" alt="Activity 4">
+        <div class="card-container shadow m-3">
+          <img src="https://ph.pinterest.com/pin/405042560258258229/" class="card-img-top" alt="Activity 4">
           <div class="card-body">
             <h5 class="card-title">Activity 04</h5>
             <p class="card-text">A one-page HTML about any specific hardware device.</p>
@@ -180,8 +208,8 @@
         </div>
       </div>
       <div class="col-lg-4 col-md-6">
-        <div class="card shadow m-3">
-          <img src="https://i.pinimg.com/736x/b3/41/bb/b341bb582e477278fabfc2fc99feff60.jpg" class="card-img-top" alt="Activity 5">
+        <div class="card-container shadow m-3">
+          <img src="https://i.pinimg.com/736x/58/44/4b/58444baad048be6e4baaa85f655aba55.jpg" class="card-img-top" alt="Activity 5">
           <div class="card-body">
             <h5 class="card-title">Activity 05</h5>
             <p class="card-text">A one-page HTML about your preferred place you want to feature.</p>
@@ -190,29 +218,28 @@
         </div>
       </div>
       <div class="col-lg-4 col-md-6">
-        <div class="card shadow m-3">
-          <img src="https://i.pinimg.com/736x/e2/f2/fa/e2f2fa06f9c3f0c91456bd123830e2d2.jpg" class="card-img-top" alt="Activity 6">
+        <div class="card-container shadow m-3">
+          <img src="https://i.pinimg.com/736x/80/b7/5b/80b75b0205cbb5b34ca3992edb5f5983.jpg" class="card-img-top" alt="Activity 6">
           <div class="card-body">
             <h5 class="card-title">Activity 06</h5>
-            <p class="card-text">Description of Activity 6 here.</p>
-            <a href="#" class="btn btn-primary">See Project</a>
+            <p class="card-text">An HTML website that contains some form of gallery. It can be about anything.</p>
+            <a href="A06/index.html" class="btn btn-primary">See Project</a>
           </div>
         </div>
       </div>
       <div class="col-lg-4 col-md-6">
-        <div class="card shadow m-3">
-          <img src="https://via.placeholder.com/400x200?text=Activity+7" class="card-img-top" alt="Activity 7">
+        <div class="card-container shadow m-3">
+          <img src="https://i.pinimg.com/736x/22/65/6b/22656b961fb47363218d008bf9b57d1b.jpg" class="card-img-top" alt="Activity 7">
           <div class="card-body">
             <h5 class="card-title">Activity 07</h5>
-            <p class="card-text">Description of Activity 7 here.</p>
-            <a href="#" class="btn btn-primary">See Project</a>
+            <p class="card-text">An HTML website that utilizes a free public API with JSON return. It can be about anything. It can have one or more pages..</p>
+            <a href="" class="btn btn-primary">See Project</a>
           </div>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- Contact Section -->
   <section id="contact" class="container mt-5">
     <h2><i class="fas fa-envelope"></i> My Contacts</h2>
     <div class="social-links">
@@ -222,7 +249,6 @@
     </div>
   </section>
 
-  <!-- Footer -->
   <footer class="text-center">
     <p>&copy; 2025 Patricia Brin. All rights reserved.</p>
   </footer>
