--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
   <nav class="navbar navbar-expand-lg fixed-top">
     <div class="container">
       <a class="navbar-brand" href="#">
-        <img src="https://i.ibb.co/M1YZ1Wc/W03-logo.png" alt="Logo" width="35" height="30" class="d-inline-block align-text-top">
+        <img src="../A04/W03-logo.png" alt="logo" width="35" height="30" class="d-inline-block align-text-top">
         Patricia Brin
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -187,7 +187,7 @@
   <section id="about" class="profile-section">
     <div class="cover-photo"></div>
     <div class="profile-content">
-      <img src="https://i.ibb.co/qBbbnqg/patricia.png" alt="Your Profile Picture" class="profile-img">
+      <img src="..A04/patricia.png" alt="Your Profile Picture" class="profile-img">
       <h1 class="mt-3">Patricia Brin</h1>
       <p class="lead">Diploma in Information Technology student at PUP – Sto. Tomas Branch.</p>
       <p>Welcome to my portfolio! I'm passionate about technology and always eager to grow. Below you'll find a showcase of my academic and creative web projects.</p>
