--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
       <img src="..A04/patricia.png" alt="Your Profile Picture" class="profile-img">
       <h1 class="mt-3">Patricia Brin</h1>
       <p class="lead">Diploma in Information Technology student at PUP – Sto. Tomas Branch.</p>
-      <p>Welcome to my portfolio! I'm passionate about technology and always eager to grow. Below you'll find a showcase of my academic and creative web projects.</p>
+      <p>Welcome to my portfolio! Below you'll find a showcase of my academic and creative web projects.</p>
     </div>
   </section>
 
@@ -199,7 +199,7 @@
     <div class="row">
       <div class="col-lg-4 col-md-6">
         <div class="card-container shadow m-3">
-          <img src="https://ph.pinterest.com/pin/405042560258258229/" class="card-img-top" alt="Activity 4">
+          <img src="https://i.pinimg.com/736x/49/8b/b9/498bb9add8d3bef02023cc65f8b76b4c.jpg" class="card-img-top" alt="Activity 4">
           <div class="card-body">
             <h5 class="card-title">Activity 04</h5>
             <p class="card-text">A one-page HTML about any specific hardware device.</p>
