--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Patricia Brin</title>
-  <link rel="icon" href="../A04/W03.logo.png" type="logo">
+  <link rel="icon" href="../A04/W03.logo.png" type="icon"/>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -187,7 +187,7 @@
   <section id="about" class="profile-section">
     <div class="cover-photo"></div>
     <div class="profile-content">
-      <img src="..A04/patricia.png" alt="Your Profile Picture" class="profile-img">
+      <img src="../A04/patricia.png" alt="Your Profile Picture" class="profile-img">
       <h1 class="mt-3">Patricia Brin</h1>
       <p class="lead">Diploma in Information Technology student at PUP – Sto. Tomas Branch.</p>
       <p>Welcome to my portfolio! Below you'll find a showcase of my academic and creative web projects.</p>
