--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
   <section id="about" class="profile-section">
     <div class="cover-photo"></div>
     <div class="profile-content">
-      <img src="../A04/patricia.png" alt="Your Profile Picture" class="profile-img">
+      <link rel="icon" href="../A04/patricia.png" alt="Your Profile Picture" class="profile-img"/>
       <h1 class="mt-3">Patricia Brin</h1>
       <p class="lead">Diploma in Information Technology student at PUP – Sto. Tomas Branch.</p>
       <p>Welcome to my portfolio! Below you'll find a showcase of my academic and creative web projects.</p>
