--- a/A05/index.html
+++ b/A05/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amsterdam</title>
-    <link rel="icon" href="../A04/W03.logo.png" type="icon">
+    <link rel="icon" href="../A04/W03.logo.png" type="icon" />
     <link rel="stylesheet" href="style.css">
     <link rel="preload" href="the amsterdam.jpg" as="image">
     <link rel="preload" href="tulips.jpg" as="image">
