--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
           <img src="https://i.pinimg.com/736x/cb/ac/02/cbac022d42b1f0d2308b8ac2ff2170f0.jpg" class="card-img-top" alt="Activity 7" />
           <div class="card-body">
             <h5 class="card-title">Activity 07</h5>
-            <p class="card-text">Description of Activity 7 here.</p>
+            <p class="card-text">An HTML website that utilizes a free public API with JSON return. It can be about anything. It can have one or more pages.</p>
             <a href="A07/index.html" class="btn btn-primary">See Project</a>
           </div>
         </div>
