--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
   <section id="about" class="pt-5 mt-5">
     <div class="container">
       <img src="../A04/patricia.png" alt="Your Profile Picture" class="img-fluid"/>
-      <h1>Hello, I'm Patricia Brin</h1>
+      <h1>Hello, I'm Patricia Brin!</h1>
     </div>
   </section>
 
